Done as a whole
NEED TO PUT IN SUB COMPONENTS

--- a/src/styles.css
+++ b/src/styles.css
@@ -19,3 +19,13 @@
     line-height: 2 !important;
     font-family: 'Major Mono Display', monospace;
 } 
+
+.tab_content {
+    font-size: 12px !important;
+    line-height: 2 !important;
+    font-family: 'Major Mono Display', monospace;
+} 
+
+.centerItem{
+    text-align: center;
+  }
