Complete AddTournament component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,61 @@
 /* You can add global styles to this file, and also import other style files */
+.navbar {
+    background: linear-gradient(to right, #72f0ff, #a2a2ff);
+    font-size: 11px !important;
+    line-height: 3 !important;
+    letter-spacing: 4px;
+    font-family: Montserrat, sans-serif;
+}
+
+.form-control,.btn-primary {
+    font-size: 12px !important;
+    letter-spacing: 1   px;
+    font-family: 'Major Mono Display', monospace;
+} 
+
+.con_name {
+    font-size: 12px !important;
+    letter-spacing: 1px;
+    line-height: 2 !important;
+    font-family: 'Major Mono Display', monospace;
+} 
+
+.tab_content {
+    font-size: 12px !important;
+    line-height: 2 !important;
+    font-family: 'Major Mono Display', monospace;
+} 
+
+.centerItem{
+    text-align: center;
+  }/* You can add global styles to this file, and also import other style files */
+.navbar {
+    background: linear-gradient(to right, #72f0ff, #a2a2ff);
+    font-size: 11px !important;
+    line-height: 3 !important;
+    letter-spacing: 4px;
+    font-family: Montserrat, sans-serif;
+}
+
+.form-control,.btn-primary {
+    font-size: 12px !important;
+    letter-spacing: 1   px;
+    font-family: 'Major Mono Display', monospace;
+} 
+
+.con_name {
+    font-size: 12px !important;
+    letter-spacing: 1px;
+    line-height: 2 !important;
+    font-family: 'Major Mono Display', monospace;
+} 
+
+.tab_content {
+    font-size: 12px !important;
+    line-height: 2 !important;
+    font-family: 'Major Mono Display', monospace;
+} 
+
+.centerItem{
+    text-align: center;
+  }
