Updated Page Logo and Spacing
Update Logo and Spacing

--- a/src/app/add-tournament/add-tournament.component.html
+++ b/src/app/add-tournament/add-tournament.component.html
@@ -3,18 +3,18 @@
       <div class="row">
         <div class="col-sm-2"></div>
         <div class="col-sm-4">
-          <br><br>
+          <br><br><br>
           <input class="form-control" required="true" placeholder="TOURNAMENT NAME" #tournyName />
           <br>
           <textarea class="form-control" id="comments" name="comments" placeholder="TOURNAMENT DESCRIPTION" 
           rows="7" #tournyDesc required="true"></textarea>
         </div>
         <div class="col-sm-1">
-          <br><br>  
-            <P class="text-left con_name">GAME TYPE:</P><br><br>
-            <P class="text-left con_name">GAME FORMAT:</P><br>
-            <P class="text-left con_name">NO OF PLAYERS:</P><br><br>
-            <P class="text-left con_name">START DATE:</P>
+          <br><br><br>
+          <P class="text-left con_label">GAME TYPE:</P><br>
+          <P class="text-left con_label">GAME FORMAT:</P><br>
+          <P class="text-left con_label">NO OF PLAYERS:</P><br>
+          <P class="text-left con_label">START DATE:</P>
         </div>    
         <div class="col-sm-3">
           <br>
@@ -64,7 +64,7 @@
           </tbody>
         </table>
       </div>
-  
+          
       <!-- <div class="bg-secondary text-white text-left p-2">
         <div class="form-check">
           <input class="form-check-input" type="checkbox" [(ngModel)]="showComplete" />
