Import header & footer to index

--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -1,6 +1,10 @@
+<app-header [title]="title"></app-header>
+
 <div class="container">
   <h1 class="text-center">{{ title }}</h1>
   <div class="d-flex justify-content-center">
     <hr class="border border-dark border-2 opacity-50 w-25" />
   </div>
 </div>
+
+<app-footer></app-footer>
