Import AddTournament to IndexComponent

--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -1,10 +1,12 @@
 <app-header [title]="title"></app-header>
 
-<div class="container">
+<div class="container-fluid">
   <h1 class="text-center">{{ title }}</h1>
   <div class="d-flex justify-content-center">
     <hr class="border border-dark border-2 opacity-50 w-25" />
   </div>
+
+  <app-add-tournament></app-add-tournament>
 </div>
 
 <app-footer></app-footer>
