--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -6,7 +6,17 @@
     <hr class="border border-dark border-2 opacity-50 w-25" />
   </div>
 
-  <app-add-tournament></app-add-tournament>
+  <div class="container d-flex justify-content-center">
+    <div class="card w-75">
+      <h3 class="card-header">Simplify Tournament Management</h3>
+      <div class="card-body text-center">
+        <h5 class="card-title">Join the millions who trust Tournament to manage their games</h5>
+        <p class="card-text">
+          Try our <a routerLink="/tournament/list">Tournament Generator</a>
+        </p>
+      </div>
+    </div>
+  </div>
 </div>
 
 <app-footer></app-footer>
