Temporary display TournamentList at Home page

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -20,7 +20,7 @@
           <i class="fas fa-home"></i> Home
         </a>
       </li>
-      <li class="nav-item dropdown">
+      <!-- <li class="nav-item dropdown">
         <a
           *ngIf="
             title === 'Tournament List' || title === 'Create new Tournament' || title == 'Edit Tournament';
@@ -59,7 +59,7 @@
             </a>
           </li>
         </ul>
-      </li>
+      </li> -->
     </ul>
   </div>
 </nav>
