--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -12,11 +12,14 @@
       <div class="card-body text-center">
         <h5 class="card-title">Join the millions who trust Tournament to manage their games</h5>
         <p class="card-text">
-          Try our <a routerLink="/tournament/list">Tournament Generator</a>
+          Try our <a routerLink="/tournament/add">Tournament Generator</a>
         </p>
       </div>
     </div>
   </div>
+
+  <br />
+  <app-tournament-list></app-tournament-list>
 </div>
 
 <app-footer></app-footer>
