--- a/src/app/components/tournament/add-edit.component.html
+++ b/src/app/components/tournament/add-edit.component.html
@@ -93,7 +93,7 @@
           Submit
         </button>
 
-        <a href="#" routerLink="/tournament/list" class="btn btn-warning">
+        <a href="#" routerLink="/" class="btn btn-warning">
           <i class="fa-solid fa-rotate-left"></i>
           Cancel
         </a>
