--- a/src/app/components/tournament/list.component.html
+++ b/src/app/components/tournament/list.component.html
@@ -1,12 +1,12 @@
-<app-header [title]="title"></app-header>
+<!-- <app-header [title]="title"></app-header> -->
 
 <main class="container">
   <div class="row">
-    <h1 class="text-center">{{ title }}</h1>
+    <!-- <h1 class="text-center">{{ title }}</h1>
     <div class="d-flex justify-content-center">
       <hr class="border border-dark border-2 opacity-50 w-25" />
-    </div>
-
+    </div> -->
+    
     <div>
       <a
         routerLink="/tournament/add"
@@ -60,4 +60,4 @@
   </div>
 </main>
 
-<app-footer></app-footer>
+<!-- <app-footer></app-footer> -->
