--- a/src/app/components/add-tournament/add-tournament.component.html
+++ b/src/app/components/add-tournament/add-tournament.component.html
@@ -26,7 +26,7 @@
           <div class="col-auto ">
             <button class="btn btn-danger con_name" type="submit" (click)="addNewItem(tournyName.value,tournyDesc.value 
             + ' [GT:' + tournyType.value + ',GF:' + tournyFormat.value + ',NP:' + tournyNoPlayers.value + ' players]',tournyDate.value)">
-            Add Tournament
+            Add Tournament1
             </button>
           </div>
         </div>
@@ -73,6 +73,7 @@
           </label>
         </div>
       </div> -->
+
   
     </div>
 </div> 
