--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -13,6 +13,7 @@
         <h5 class="card-title">Join the millions who trust Tournament to manage their games</h5>
         <p class="card-text">
           Try our <a routerLink="/tournament/add">Tournament Generator</a>
+          Try our <a routerLink="/my-profile/my-profile">Create New Profile</a>
         </p>
       </div>
     </div>
