--- a/src/app/components/my-profile/my-profile.component.html
+++ b/src/app/components/my-profile/my-profile.component.html
@@ -1,35 +1,46 @@
-<p>my-profile works!</p>
+
+  <a
+  routerLink="/my-profile/my-profile">
+  
+</a>
 
 <div class="container">
+    
     <div class="row">
-
-        <div class="offset-md-3 col-md-3">
+        <div>
+        <div class="offset-md-3 col-md-6">
+            <h1><p>NEW PROFILE</p></h1>
             <h1>{{title}}</h1>
 
             <!-- <% for(var i in messages) { %>
                 <div class="flash"><%= messages[i] %></div>
             <% } %> -->
+            <i class="fas fa-plus-circle"></i>
+            Create New Profile
             <form action="/users/signup" method="post" validate>
                 <div class="form-group">
+                   
                     <label>First Name:</label>
-                    <input type="text" name="firstName" value="{{firstName}}" class="form-control"/>
+                    
+                    <input type="text" name="firstName" value="{{firstName}}" class="form-control" placeholder="Enter First Name"/>
+                    
                     <!-- <input type="text" name="firstName" value="<%= user.firstName %>" class="form-control"/> -->
                 </div>
                 <div class="form-group">
                     <label>Last Name:</label>
-                    <input type="text" name="lastName" value="{{lastName}}" class="form-control"/>
+                    <input type="text" name="lastName" value="{{lastName}}" class="form-control" placeholder="Enter Last Name"/>
                 </div>
                 <div class="form-group">
                     <label>Email:</label>
-                    <input type="text" name="email" value="{{email}}" class="form-control"/>
+                    <input type="text" name="email" value="{{email}}" class="form-control" placeholder="Enter Email"/>
                 </div>
                 <div class="form-group">
                     <label>Username:</label>
-                    <input type="text" name="username" value="{{username}}" class="form-control"/>
+                    <input type="text" name="username" value="{{username}}" class="form-control" placeholder="Enter Username"/>
                 </div>
                 <div class="form-group">
                     <label>Password:</label>
-                    <input type="password" name="password" value="{{userpassword}}" class="form-control"/>
+                    <input type="password" name="password" value="{{userpassword}}" class="form-control" placeholder="Enter Password"/>
                 </div>
                 <br>
                 <div>
