--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -13,7 +13,7 @@
         <h5 class="card-title">Join the millions who trust Tournament to manage their games</h5>
         <p class="card-text">
           Try our <a routerLink="/tournament/add">Tournament Generator</a>
-          Try our <a routerLink="/my-profile/my-profile">Create New Profile</a>
+          || <a routerLink="/my-profile/my-profile"> <i class="fas fa-plus-circle"></i>Create New Profile</a>
         </p>
       </div>
     </div>
