--- a/src/app/components/my-profile/my-profile.component.html
+++ b/src/app/components/my-profile/my-profile.component.html
@@ -1,4 +1,4 @@
-
+<!-- <app-header [title]="title"></app-header> -->
   <a
   routerLink="/my-profile/my-profile">
   
@@ -9,34 +9,29 @@
     <div class="row">
         <div>
         <div class="offset-md-3 col-md-6">
-            <h1><p>NEW PROFILE</p></h1>
+            <h1><p> Create New Profile</p></h1>
             <h1>{{title}}</h1>
 
             <!-- <% for(var i in messages) { %>
                 <div class="flash"><%= messages[i] %></div>
             <% } %> -->
-            <i class="fas fa-plus-circle"></i>
-            Create New Profile
+
             <form action="/users/signup" method="post" validate>
                 <div class="form-group">
-                   
                     <label>First Name:</label>
-                    
-                    <input type="text" name="firstName" value="{{firstName}}" class="form-control" placeholder="Enter First Name"/>
-                    
-                    <!-- <input type="text" name="firstName" value="<%= user.firstName %>" class="form-control"/> -->
+                    <input type="text" name="firstName" value="{{firstName}}" class="form-control" placeholder="Enter First Name" #FirstName/>
                 </div>
                 <div class="form-group">
                     <label>Last Name:</label>
-                    <input type="text" name="lastName" value="{{lastName}}" class="form-control" placeholder="Enter Last Name"/>
+                    <input type="text" name="lastName" value="{{lastName}}" class="form-control" placeholder="Enter Last Name" #LastName/>
                 </div>
                 <div class="form-group">
                     <label>Email:</label>
-                    <input type="text" name="email" value="{{email}}" class="form-control" placeholder="Enter Email"/>
+                    <input type="text" name="email" value="{{email}}" class="form-control" placeholder="Enter Email" #email/>
                 </div>
                 <div class="form-group">
                     <label>Username:</label>
-                    <input type="text" name="username" value="{{username}}" class="form-control" placeholder="Enter Username"/>
+                    <input type="text" name="username" value="{{username}}" class="form-control" placeholder="Enter Username" #userName/>
                 </div>
                 <div class="form-group">
                     <label>Password:</label>
@@ -44,9 +39,56 @@
                 </div>
                 <br>
                 <div>
-                    <input class="btn btn-primary" type="submit" value="Sign up" />
+                    <!-- <input class="btn btn-primary" type="submit" value="Sign up" /> -->
+
+                    <div class="col-auto ">
+                      <button class="btn btn-danger" type="submit" (click)="addNewItem(FirstName.value, LastName.value, email.value, userName.value)">
+                     Update Information
+                      </button>
+                    </div>
                 </div>
             </form>
         </div>
     </div>
+
+    <!-- //TABLES -->
+<!-- <div class="row"> -->
+
+    <div class="col-sm-3"></div>
+    <div class="col-sm-6">
+      <br>
+      Profile List
+      <br>
+      <table class="table table-striped table-bordered table-sm">
+        <thead>
+          <tr class="text-center con_name">
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email:</th>
+            <th>Username</th>
+            <th>Delete Profile</th>
+          </tr>
+        </thead>
+        <tbody class="tab_content">
+          <tr *ngFor="let item of getItems; let i = index">
+            <!-- <td class="centerItem">{{  i+1 }}</td> -->
+            <td>{{ item.task }}</td>
+            <td>{{ item.task2 }}</td>
+            <td>{{ item.task3 }}</td>
+            <td class="centerItem">{{ item.task4 }}</td>
+            <td class="centerItem"><input type="checkbox" [(ngModel)]="item.isDelete"/>
+              <p [ngSwitch]="item.isDelete">
+                <span *ngSwitchCase="true"></span>
+                <span *ngSwitchDefault></span>
+              </p> 
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+<!-- //endDiv -->
 </div>
+
+
+  
