--- a/src/app/components/shared/layout/footer.component.html
+++ b/src/app/components/shared/layout/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="position-absolute bottom-0 w-100 h-auto bg-secondary">
+<footer class="bg-secondary">
   <div class="container">
     <p class="text-light text-center">Copyright &copy; 2022 by BLPRS</p>
   </div>
