--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,8 @@
+@import "styles/base";
+@import "styles/colors";
+@import "styles/helpers";
+@import "styles/variables";
+
 /* You can add global styles to this file, and also import other style files */
 // .navbar {
 //   background: linear-gradient(to right, #72f0ff, #a2a2ff);
