--- a/src/app/components/shared/layout/header.component.html
+++ b/src/app/components/shared/layout/header.component.html
@@ -49,6 +49,7 @@
           class="nav-link"
           [class.active]="title == 'Profile'"
           [routerLink]="['profile']"
+          [routerLink]="['my-profile']"
           >Profile</a
         >
       </li>
