--- a/src/app/components/my-profile/my-profile.component.html
+++ b/src/app/components/my-profile/my-profile.component.html
@@ -1,6 +1,6 @@
 <!-- <app-header [title]="title"></app-header> -->
 
-<a routerLink="/my-profile/my-profile"></a>
+<!-- [routerLink]="['/my-profile', 'my-profile']" -->
 <div class="container">
     
     <div class="row">
