--- a/src/app/components/shared/layout/header.component.html
+++ b/src/app/components/shared/layout/header.component.html
@@ -48,8 +48,8 @@
         <a
           class="nav-link"
           [class.active]="title == 'Profile'"
-          [routerLink]="['profile']"
-          [routerLink]="['my-profile']"
+          [routerLink]="['/my-profile', 'my-profile']"
+          
           >Profile</a
         >
       </li>
