Import ProfileComponent and update path

--- a/src/app/components/shared/layout/header.component.html
+++ b/src/app/components/shared/layout/header.component.html
@@ -49,7 +49,7 @@
           *ngIf="auth.authenticated"
           class="nav-link"
           [class.active]="title == 'Profile'"
-          [routerLink]="['/my-profile', 'my-profile']"
+          [routerLink]="['/user', 'profile']"
           >Profile</a
         >
       </li>
