Integrate UserEdit API

--- a/src/app/components/user/profile.component.html
+++ b/src/app/components/user/profile.component.html
@@ -116,7 +116,7 @@
             </span>
           </div>
         </div>
-        <button class="btn btn-primary" type="submit">Sign Up</button>
+        <button class="btn btn-primary" type="submit">Submit</button>
       </form>
     </div>
   </div>
